--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,31 @@
+.App {
+  width: 100%;
+  /* height: auto; */
+}
+
+@media screen and (max-width:500px) {
+  .App {
+    max-width: 100%;
+  }
+}
+
+/* @media screen and (max-width:1005px) {
+  .App {
+    max-width: 630px;
+  }
+} */
+
+
+
+
+
+
+
+
+
+
+
+
 /* .App {
   text-align: center;
 }
