--- a/src/section/section1.css
+++ b/src/section/section1.css
@@ -22,3 +22,23 @@
     display: flex;
     gap: 10px;
 }
+
+@media screen and (max-width:500px) {
+    .section1 {
+        max-width: 100%;
+    }
+
+    .section1-sub {
+        flex-direction: column;
+    }
+    .section1-btn{
+        flex-direction: column;
+    }
+}
+
+/* @media screen and (max-width:1005px) {
+    .section1 {
+        max-width: 630px;
+
+    }
+} */
