--- a/src/section/section3.css
+++ b/src/section/section3.css
@@ -1,17 +1,22 @@
-.section3-container{
-    
+.section3-container {
+    margin-top: 10px;
+    padding: 10px;
+
 }
+
 .section3 {
     box-sizing: border-box;
-    padding: 20px;
+    padding: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 10px;
     background-color: white;
+    /* border: 2px solid red; */
 }
-.section3-h{
+
+.section3-h {
     display: flex;
     justify-content: space-between;
     align-items: center;
